--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.1.8", features = ["derive"] }
-crossbeam-channel = { version = "0.5.4" }
+crossbeam-channel = "0.5.4"
+crossbeam-utils = "0.8.8"
+futures = "0.3"
+async-std = { version = "1.11.0", features = ["attributes"]}
