--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ crossbeam-channel = "0.5.4"
 crossbeam-utils = "0.8.8"
 futures = "0.3"
 async-std = { version = "1.11.0", features = ["attributes"]}
+num-traits = "0.2.15"
