--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "distance"
-version = "0.3.0"
-edition = "2021"
+version = "0.3.1"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,3 +14,4 @@ async-std = { version = "1.11.0", features = ["attributes"]}
 num-traits = "0.2.15"
 bio = "1.2.0"
 thiserror = "2.0.17"
+num_cpus = "1.17.0"
